Fixed spacing, prop-pane now allows scrolling, thumbnail size fixed, added spacer-margins to left and right-hand sides, removed select animation on the first scenario-block, fixed right and left-hand sides' column-rows and their spacing.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -90,9 +90,11 @@ body {
 .grid2-area {
 	display: grid;
 	height: 75%;
-	grid-template-rows: 32px calc(50% - 32px) 32px calc(50% - 32px);
+	grid-template-rows: 32px calc(50% - 16px); /* 32px acts as margin */
 	grid-template-columns: 100%;
 }
+
+/* '32px spacer' */
 
 .grid2-palette {
 	grid-row: 2;
@@ -112,6 +114,7 @@ body {
 }
 
 .grid2-files {
+	overflow-y: scroll;
 	grid-row: 4;
 	grid-column: 1;
 	width: 100%;
@@ -122,20 +125,22 @@ body {
 .grid3-area {
 	display: grid;
 	height: 75%;
-	grid-template-rows: 70% 30%;
+	grid-template-rows: 32px calc(70% - 16px) calc(30% - 16px) ; /* 32px acts as margin */
 	grid-template-columns: 100%;
-	border-left: 1px solid var(--black-colour);
 }
 
+/* '32px spacer' */
+
 .grid3-prop {
-	grid-row: 1;
+	overflow-y: scroll;
+	grid-row: 2;
 	grid-column: 1;
 	width: 100%;
 	height: 100%;
 }
 
 .grid3-thumbnail {
-	grid-row: 2;
+	grid-row: 3;
 	grid-column: 1;
 	width: 100%;
 	height: 100%;
@@ -413,8 +418,11 @@ input[name="tab-btn"] {
 }
 
 /* 選択中の項目 | Selected item */
-.drag-list-item-sel {
+.drag-list-item-sel:not(:first-of-type) {
 	margin: 25px 25px;
+	border: 3px solid var(--black-colour);
+}
+.drag-list-item-sel:first-child {
 	border: 3px solid var(--black-colour);
 }
 
@@ -660,9 +668,13 @@ input[name="tab-btn"] {
 
 /* プロパティペイン | Properties panel */
 .prop-container {
+	padding-top: 0;
 	width: 100%;
 	height: 100%;
 	overflow-y: scroll;
+}
+.prop-pane h3 {
+	margin-top: 0;
 }
 .prop-container::-webkit-scrollbar {
 	width: 1px;
@@ -677,10 +689,13 @@ input[name="tab-btn"] {
 /* プロパティペイン | Properties panel (2) */
 .prop-pane {
 	width: calc(100% - 15px);
-	height: calc(100% - 10px);
+	height: 100%;
 	font-size: 16px;
-	padding: 5px;
+
 	display: none;
+	position: relative;
+	margin-block-start: 0em;
+	margin-block-end: 0em;
 }
 
 /* テキストエリア(複数行) | Text-area – multi-line */
